--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <img src="logo.min.png" alt="Hair Day Logo" width="120px">
+        <img src="logo.png" alt="Hair Day Logo" width="120px">
     </header>
 
     <nav>
